post-svc/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-svc-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: post-svc
  template:
    metadata:
      labels:
        app: post-svc
    spec:
      containers:
      - name: post-svc
        image: post-svc:latest
        ports:
        - containerPort: 3000
