post-svc/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: post-svc-ingress
spec:
  rules:
  - host: post.kblog.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: post-svc
            port:
              number: 80
